  at once. Although RFC2576 does not suggest error-status -> v2c exception
  translation, historically pysnmp used to perform it for a long time so we
  can't easily stop doing that.
- Exception re-raising improved at MibInstrumController.flipFlopFsm() and
  asynsock/twisted dispatchers so that original traceback is preserved.
- The snmpCommunityTable row selection improved to follow RFC2576, clause
  5.2.1.
- Asyncore-based dispatcher attempts to use poll() whenever available
  on the platform. It would help handling a really large number (>1024) 
  of file descriptors.
- AsynCommandGenerator.makeReadVarBinds() generalized into a new
  makeVarBinds() method which replaces somewhat redundant code at setCmd()
  and AsynNotificationOriginator.sendNotification().
- AsynCommandGenerator.uncfgCmdGen() & AsynNotificationOriginator.uncfgCmdGen()
  methods now accept optional authData parameter to remove specific entries
  from LCD. This can be useful for modifying security parameters for
  specific securityName.
- SNMP credentials management reworked to separate userName from securityName
  in snmpCommunityEntry and usmUserEntry tables. Changes made to addV1System(),
  addV3User() functions as well as to their oneliner's wrappers. 
- The contextEngineId parameter of config.addV3User() and auth.UsmUserData()
  renamed into securityEngineId as it's semantically correct
- Oneliner UsmUserData() and CommunityData() classes now support clone()'ing
  to facilitate authentication data management in user applications.
- Oneliner transport target classes now support the getTransportInfo()
  method that returns network addresses used on protocol level.
- The config.addSocketTransport() helper renamed into config.addTransport()
  and improved by automatically instantiating compatible TransportDispatcher
  making it dispatcher-agnostic. As an additional bonus, application may not
  call registerTransportDispatcher() as it would be called by addTransport().